--- a/content/portfolio/algo-trading-earnings-calls.mdx
+++ b/content/portfolio/algo-trading-earnings-calls.mdx
@@ -9,4 +9,5 @@ date: "2023-02-15"
 techStack: ["Machine Learning", "Webscraping"]
 ---
 
-Built and backtested a series of ensemble models used to predict earnings surprises and subsequent stock price returns.
+Predicting earnings surprises using model ensembles to trade earnings calls.
+
