--- a/content/portfolio/degen-crypto-jobs.mdx
+++ b/content/portfolio/degen-crypto-jobs.mdx
@@ -7,7 +7,12 @@ link: "https://degencryptojobs.com"
 icon: "DegenLogoIcon"
 categories: ["Web Development"]
 date: "2023-02-15"
-techStack: ["Next.js", "ChakraUI", "Supabase"]
+techStack: ["Next.js", "ChakraUI", "T3 Stack", "Prisma", "Python"]
 ---
 
-Slowly becoming more than just a job aggregator for crypto.
+A crypto job board that grew to 15k Telegram subscribers and 10k monthly visitors.
+
+Built on the T3 stack (NextJS, TanQuery, Prisma, Supabase) with a Python backend.
+
+The real work for this was in distribution and user analytics: usage-analytics-driven insights and feature development, alongside lots of SEO optimisation.
+
