--- a/content/portfolio/airdrops-as-a-service.mdx
+++ b/content/portfolio/airdrops-as-a-service.mdx
@@ -2,11 +2,14 @@
 title: "Airdrops-as-a-Service"
 slug: "airdrops-as-a-service"
 size: 1
-shortDescription: "Pacts: A pre-seed startup helping protocols to setup and run anti-sybil points-based airdrop campaigns"
+shortDescription: "Pacts: Platform for anti-sybil airdrop campaigns"
 icon: "AirdropIcon"
 categories: ["Web Development", "Analytics"]
 date: "2024-02-01"
-techStack: ["Next.js", "Python Telegram Bot", "PostgreSQL",]
+techStack: ["Next.js", "Python", "SQL",]
 ---
 
-Joined Pacts, a pre-seed startup offering points-based airdrop campaigns as a service. As an early engineer, I contributed to building our unified platform for on-chain ID, activity tracking, and reward distribution. This enabled protocols to target curated, non-sybil users while providing a seamless experience for end users. My work included developing the frontend for the web app, creating a Telegram bot as an additional user interface, and implementing the reward calculation system to ensure accurate and efficient distributions based on user on-chain activity.
+Early engineer at Pacts, building the infrastructure for anti-sybil airdrop campaigns.
+
+I owned the frontend, built both the web app and telegram bot. I also wrote the reward caclulation service that determines how rewards are distributed to users.
+This was a mutually beneficial system that processed on-chain activity and allowed protocols to target desirable demographics, and for users to monitor their eligibility and rewards for airdrops.
