--- a/content/posts/intro-gpu-programming.mdx
+++ b/content/posts/intro-gpu-programming.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Going from 0 to 60 on GPU Programming Part 1: Hardware & Mental Model"
+title: "Going from 0 to 60 on GPU Programming (Part 1): Hardware & Mental Model"
 date: "2025-05-30"
 excerpt: ""
 categories: ["deep learning", "triton", "draft"]
@@ -9,9 +9,10 @@ relatedPosts: []
 import { Callout, CaptionedImage, CaptionedVideo } from "@/components/garden/post-blocks";
 import { Image } from "@chakra-ui/react";
 
-Most articles are about optimizing models (or using them). Few of them are about optimizing the code that runs them.
-This article is a dump of my resources for learning GPU programming and intended to be a mini-resource for others that wish to break this abstraction layer.
-Though it might seem daunting at first, knowing a few key concepts can go a long way in understanding this seemingly esoteric concept.
+Most articles are about finetuning models (or using them). Few are about optimizing the code that runs them.
+This series is a semi-organized dump of my resources and notes for learning GPU programming and intended to be a mini-resource for others that wish to break this abstraction layer.
+
+While the idea of shifting to slightly lower level programming might seem daunting at first, knowing a few key concepts and resources can go a long way in understanding this seemingly esoteric topic.
 
 > you-can-just-do-things.jpg
 
@@ -23,7 +24,9 @@ Most introductions to GPUs start with this mythbuster video...
   width="800px"
 />
 
-But we can do a lot better. Knowing a little more about the architecture and make-up of a GPU will help a lot with understanding why we're choosing to program things in a certain way.
+It's a visualization of what parallel compute looks like, but we can do a lot better. Knowing a little more about the architecture and the hardware make-up of a GPU will help a lot with understanding why we're why make certain design choices and optimizations later.
+
+## GPU Structure
 
 GPUs consist of many streaming multiprocessors (SMs, which are sometimes also known as compute units). These each contain "cores", schedulers, and on-chip memory (more on these later).
 
@@ -34,8 +37,12 @@ For now, let's start with a bottom up view of how things work on a GPU: When a p
 - Blocks/Thread blocks are groups of warps/threads. Each block is assigned to a single SM and share its resources (memory and clock). Hence all threads within a block have access to a fast on-chip memory which they can use to share and sync data (more on this later).
 - Grids are a collection of blocks, and blocks within a grid can execute independently and concurrently, depending on the available GPU resources. There are no shared resources between blocks in a grid.
 
+<CaptionedImage src="/post-images/gpu-kernel-execution-hierarchy.png" alt="GPU Kernel Execution Hierarchy" caption="GPU Kernel Execution Hierarchy" />
 
-## Grounding with hardware
+This hierarchy and organization is part abstraction and part grounded in the structure of the GPU hardware. They are necessary to begin understanding how programs are written for them.
+As a simplification, we write code that is executed by threads, and we use blocks/grids to run many copies of that code in parallel.
+
+## Grounding the abstraction in hardware
 
 If you've ever bought a GPU or watched an NVIDIA announcement, you've probably seen something like this:
 
@@ -43,7 +50,7 @@ If you've ever bought a GPU or watched an NVIDIA announcement, you've probably s
 
 As mentioned earlier, each SM executes multiple warps simultaneously, scheduling instructions, and providing access to fast on-chip memory (shared memory and registers).
 
-An SM includes:
+In terms of hardware, an SM includes:
 - ALUs (integer and floating point operations)
 - Tensor cores (matrix operations)
 - Registers
@@ -52,7 +59,7 @@ An SM includes:
 
 Multiple SMs operate independently within a GPU to orchestrate thousands of concurrent threads in a GPU.
 
-## Running a kernel
+## Kernel Lifecycle
 
 A typical GPU computation involves:
 
@@ -67,15 +74,8 @@ The result of the kernel's computation is typically written to designated points
 While the idea of working with pointers might be daunting to some without a CS background, the use of pointers here is typically straightforward.
 It also makes it easy to write multiple outputs (including intermediate outputs) with a single kernel operation.
 
----
 
-## Abstraction differences between CUDA and Triton
-- Triton abstracts away most of the block layer and shoulders responsibility of thread-block organization. Instead, the user focuses on the the data to be managed by the threads (called "tiles"). The mapping of threads to GPU hardware is then handled by Triton based on grid size, tile dimensions, and memory requirements. Triton also handles optimization of memory allocation, allowing threads to access contiguous memory locations.
-- CUDA provides more explicit control over grid and block dimensions (up to 3D), and allows explicit management of thread IDs, block IDs, and grid IDs, offering finer-grained control but requiring more manual management.
-
-Triton allows you to reason at a higher level of abstraction: vectorized blocks, rather than individual threads.
-This trade-off is typically worth it and hence the hype around triton: getting 80% of the optimization performance with 20% of the work.
-
+<br/>
 
 ## Summary Mental Model
 - Threads are smallest unit of a GPU, they are also typically abundant
@@ -84,6 +84,13 @@ This trade-off is typically worth it and hence the hype around triton: getting 8
 - SMs execute thread blocks
 - Global memory is slow
 
+---
 
+<br/>
 
+## CUDA vs Triton: Abstraction Differences
+- Triton abstracts away most of the block layer and shoulders responsibility of thread-block organization. Instead, the user focuses on the the data to be managed by the threads (called "tiles"). The mapping of threads to GPU hardware is then handled by Triton based on grid size, tile dimensions, and memory requirements. Triton also handles optimization of memory allocation, allowing threads to access contiguous memory locations.
+- CUDA provides more explicit control over grid and block dimensions (up to 3D), and allows explicit management of thread IDs, block IDs, and grid IDs, offering finer-grained control but requiring more manual management.
 
+Triton allows you to reason at a higher level of abstraction: vectorized blocks, rather than individual threads.
+This trade-off is typically worth it and hence the hype around triton: getting 80% of the optimization performance with 20% of the work.
