--- a/content/portfolio/edh-battle-bot.mdx
+++ b/content/portfolio/edh-battle-bot.mdx
@@ -10,12 +10,14 @@ date: "2024-12-22"
 techStack: ["Telegram Bot"]
 ---
 
-A Telegram bot to track wins, losses, and statistics in your EDH/Commander Magic: The Gathering pods!
+
+
+A Telegram bot for tracking Commander/EDH game stats.
 [Fully open source](https://github.com/0xEljh/edh-telegram-bot)
 
-## Backstory
-Last year my playgroup decided to try something fun: we started logging our games and wins, which started weekly goading/banter over who's been rising up the leaderboard and culminated in a little Christmas giveaway where we gave our top player a human-sized goose stuffed toy.
+My playgroup was tracking games manually in a spreadsheet as part of some friendly competition and a Christmas giveaway (which included a human-sized toy goose).
+This was a lot for one person to handle, and involved a lot of post-game coordination to keep track of everything.
 
-All this logging was done by one person who maintained a complete spreadsheet of our games. And so I thought: it would be wonderful if I could make a simple bot for this. Hence, this telegram to log games in your pod!
-
+So I wrote this bot to automate that. The bot tracks games, win rates, and weekly/all time leaderboards.
+It's meant to facilitate banter, pre-game goading, and debates about the pod arch-enemy before and after games.
 
