--- a/content/portfolio/marinachain.mdx
+++ b/content/portfolio/marinachain.mdx
@@ -10,5 +10,11 @@ date: "2022-01-01"
 techStack: ["Machine Learning", "React"]
 ---
 
-Our goal as a startup was to become the go-to for tokenized carbon credits for the maritime industry.
-For this, we first begun with facilitating the tracking of carbon emissions and performing emissions estimates based on the satellite-tracked path of vessels and the corresponding ship spec data.
+If the Maritime industry is to adopt carbon credits and carbon credits trading (the market for which our startup was ultimately aiming at), it needed a way to systematically track emissions data for all vessels.
+Ideally, this would occur in a manner that's frictionless (permissionless) yet reliable (as self-reporting only goes so far). Hence, the goal of predicting vessel emissions from "publicly available" satellite data.
+
+I built a model to estimate CO2 output from AIS satellite tracks and vessel specification sheets (engine types, capactiies, etc.). It's physics combined with data modelling.
+
+The end goal of the startup was to be the marketplace for carbon credits. But we couldn't offset what isn't accounted for, and so this was the accounting layer.
+
+
