--- a/content/portfolio/post-quantum-cryptography.mdx
+++ b/content/portfolio/post-quantum-cryptography.mdx
@@ -10,3 +10,7 @@ techStack: ["Python", "Rust"]
 ---
 
 Researched the use of post-quantum encryption (FHE, MPC, etc.) in deep learning.
+
+This was my second internship, this time at A*star, another national research lab. It was also in the middle of COVID lockdowns.
+
+Most of this project was experimenting with and benchmarking different frameworks and implementations (like SCALE-MAMBA) in deep learning related use-cases.
