--- a/content/portfolio/tea-the-gathering.mdx
+++ b/content/portfolio/tea-the-gathering.mdx
@@ -10,4 +10,8 @@ date: "2025-04-01"
 techStack: ["Nextjs", "motion.dev", "Chakra UI"]
 ---
 
-Supporting my partner's new business through this website and helping out in the kitchen from time to time.
+Built a website for my partner's tea experience business.
+
+Used my favorite/comfort stack of Chakra UI, motion.dev, and Nextjs. Designed to match my partner's goal of something simple, yet warm, modern, and a little zen.
+
+Sometimes I also help out in the kitchen.
