--- a/content/posts/classic-sgd.mdx
+++ b/content/posts/classic-sgd.mdx
@@ -10,12 +10,12 @@ relatedPosts: []
 
 It's 2021, I'm a fresh graduate working at MindPointEye, working on object detection models (YOLOX).
 
-At the time, semi-supervised methods were all the rage. Within the year, I also just discovered [distil.pub](https://distill.pub/) (which I miss dearly) and was absolutely possed by [this beautiful article called "Why Momentum really works"](https://distill.pub/2017/momentum/).
+At the time, [semi-supervised methods were all the rage](https://arxiv.org/abs/2002.05709). Within the year, I also just discovered [distil.pub](https://distill.pub/) (which I miss dearly) and was absolutely possed by [this beautiful article called "Why Momentum really works"](https://distill.pub/2017/momentum/).
 
 As a result, the two biggest training optimisations I pursued were:
 
 1. data augmentation pipelines
-2. LR scheduling (reduction on plateau)
+2. LR scheduling (reduction on plateau) + high momentum
 
 And it worked, almost like magic. It felt crazy to make such an impact as a junior in a huge team of research engineers and scientists.
 
@@ -64,10 +64,10 @@ This means that if we employ learning rate scheduling and gradually decrease lea
 
 ## But why?
 
-If we interpret "learning rate" as scale factor for how much the parameters can change, then PyTorch's implementation makes sense.
+If we interpret "learning rate" as scale factor for how much the parameters can change (like a "step size"), then PyTorch's implementation makes sense.
 
-But if we're trying to recreate the monentum and learning rate mechanics like in the "Why Momentum Really Works" article, then it falls completely flat.
+But if we're trying to recreate the monentum and learning rate mechanics like in the "Why Momentum Really Works" article, then it fails because reducing the learning rate also reduces the effect of momentum.
 
 When I was first trying to "debug" this, I considered if I needed a momentum scheduler or if my idea of a "large momentum" wasn't quite right.
 
-Turns out, this one-line change was all that's needed.
+Turns out, [a one-line change to make the momentum term invariant of learning rate was all we need](https://github.com/0xEljh/classic-torch-sgd).
