add math/variable tooltips

--- a/content/posts/classic-sgd.mdx
+++ b/content/posts/classic-sgd.mdx
@@ -70,4 +70,4 @@ But if we're trying to recreate the monentum and learning rate mechanics like in
 
 When I was first trying to "debug" this, I considered if I needed a momentum scheduler or if my idea of a "large momentum" wasn't quite right.
 
-Turns out, [a one-line change to make the momentum term invariant of learning rate was all we need](https://github.com/0xEljh/classic-torch-sgd).
+Turns out, <GithubPreview repo="0xEljh/classic-torch-sgd">a one-line change to make the momentum term invariant of learning rate was all we need</GithubPreview>.
