update home styling, add dashboard preview, adopt ascii progress bars

--- a/content/posts/classic-sgd.mdx
+++ b/content/posts/classic-sgd.mdx
@@ -1,7 +1,7 @@
 ---
 title: "LR Scheduling and SGD"
 date: "2026-01-15"
-excerpt: ""
+excerpt: "My first encounter with training internals"
 categories: ["Deep Learning", "Math", "Pytorch"]
 relatedPosts: []
 ---
