--- a/content/posts/time-accounting.mdx
+++ b/content/posts/time-accounting.mdx
@@ -1,12 +1,10 @@
 ---
 title: "Low-Friction Time Accounting"
 date: "2026-01-08"
-excerpt: ""
+excerpt: "Vibecoding a personal system"
 categories: ["life", "analytics"]
 relatedPosts: []
 ---
-
-
 
 Ever since I read the 4-Hour Work Week and stumbled my way into the lifestyle design and optimisation crowd, I had been a sporadic practitioner of time accounting.
 From time to time, I would go through the pain of recording how I was spending my time in a given day, to as much detail as I could.
@@ -33,7 +31,11 @@ For the categories, I settled on "Deep Work", "Shallow Work", "Biology", "Life O
 
 I then set up a Notion database to record all of this in.
 
-<CaptionedImage src="/post-images/notion-time-accounting.jpeg" alt="Notion time accounting database" caption="Added a few formulas to these time accounting pages"/>
+<CaptionedImage
+  src="/post-images/notion-time-accounting.jpeg"
+  alt="Notion time accounting database"
+  caption="Added a few formulas to these time accounting pages"
+/>
 
 It wasn't much, but this is half the work. The other half is making sure that I don't need to "think hard" about what's happened the past few hours, or sometimes even half a day when I check in.
 
@@ -43,7 +45,11 @@ That meant having to set up some systems of automated tracking.
 
 Enter ActivityWatch. I wish I discovered this earlier. It had all the problems of time accounting go away and introduced new levels of tracking I never though possible. It was like wakatime (which I also added to the stack), but for everything on my computer.
 
-<CaptionedImage src="/post-images/activity-watch.png" alt="Screenshot of ActivityWatch dashboard" caption="ActivityWatch has very rich logs, to the point that the dashboard has too much info"/>
+<CaptionedImage
+  src="/post-images/activity-watch.png"
+  alt="Screenshot of ActivityWatch dashboard"
+  caption="ActivityWatch has very rich logs, to the point that the dashboard has too much info"
+/>
 
 First of all, to take away all the guess work behind how I spent time on my computers, I added some cronjobs to gather up my ActivityWatch data, aggregate them, and add them to my current day Notion page.
 This way, whenever I opened up today's time accounting page, I'm greeted with a nice hour-by-hour overview of my time online, including my use of programming tools (such as neovim, btw), planning apps (like Notion and logseq), and even browser activity and AI chats.
